--- a/src/styles/styles.pcss
+++ b/src/styles/styles.pcss
@@ -14,7 +14,38 @@
 }
 
 body {
-    margin: 0;
-    font-family: var(--font-family);
-    font-weight: var(--font-weight-regular);
+  margin: 0;
+  font-family: var(--font-family);
+  font-weight: var(--font-weight-regular);
+}
+
+.navigation {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.link-list {
+  margin: 0;
+  padding: 0;
+}
+
+.nav-link-item {
+  display: block;
+  height: 30px;
+  width: 200px;
+  line-height: 30px;
+  margin-bottom: 2px;
+  text-align: center;
+  border-radius: 5px;
+  background: var(--black-1);
+}
+
+.nav-link {
+  display: block;
+  text-decoration: none;
+  color: var(--white-1);
+  font-size: 10px;
 }
