add back-panel component

--- a/src/pages/change-password/change-password.hbs
+++ b/src/pages/change-password/change-password.hbs
@@ -9,11 +9,8 @@
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 </head>
 <body>
-    <aside class="home-menu">
-        <div class="home-icon">
-            <a href="../profile/profile.hbs" class="home-link" tabindex="1">&lt;-</a>
-        </div>
-    </aside>
+
+    {{> back-panel/back-panel backURL="../profile/profile.hbs" }}
     <main class="page">
         <div class="profile-wrap">
             <div class="profile-header">
