--- a/src/styles/styles.pcss
+++ b/src/styles/styles.pcss
@@ -2,6 +2,7 @@
 @import "../partials/input/input.pcss";
 @import "../partials/button/button.pcss";
 @import "../partials/chat-item/chat-item.pcss";
+@import "../partials/back-panel/back-panel.pcss";
 @import "./fonts.pcss";
 
 @import "../pages/login/login.pcss";
