--- a/src/pages/profile/profile.hbs
+++ b/src/pages/profile/profile.hbs
@@ -9,11 +9,7 @@
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 </head>
 <body>
-    <aside class="home-menu">
-        <div class="home-icon">
-            <a href="../chat/chat.hbs" class="home-link" tabindex="1">&lt;-</a>
-        </div>
-    </aside>
+    {{> back-panel/back-panel backURL="../chat/chat.hbs" }}
     <main class="page">
         <div class="profile-wrap">
             <div class="profile-header">
