move submit buttons inside <form>

--- a/src/pages/change-password/change-password.hbs
+++ b/src/pages/change-password/change-password.hbs
@@ -26,17 +26,16 @@
                 </div>
             </div>
 
-            <form action="" method="post" class="profile-data lined">
-                {{> input/input name="oldPassword" label="Старый пароль" isPassword=true value="password"}}
-                {{> input/input name="newPassword" label="Новый пароль" isPassword=true value="my-new-pa$$w0rd" mode="error"}}
-                {{> input/input name="newPassword" label="Повторите новый пароль" isPassword=true value="my-new-pa$$" error-msg="Пароли не совпадают" mode="error"}}
-            </form>
-
-            <div class="profile-footer">
-                <div class="profile-action-button">
+            <form action="" method="post" class="form profile-data">
+                <div class="lined">
+                    {{> input/input name="oldPassword" label="Старый пароль" isPassword=true value="password"}}
+                    {{> input/input name="newPassword" label="Новый пароль" isPassword=true value="my-new-pa$$w0rd" mode="error"}}
+                    {{> input/input name="newPassword" label="Повторите новый пароль" isPassword=true value="my-new-pa$$" error-msg="Пароли не совпадают" mode="error"}}
+                </div>
+                <div class="profile-form__button">
                     {{> button/button submit=true text="Сохранить" mode="primary"}}
                 </div>
-            </div>
+            </form>
         </div>
     </main>
 </body>
