--- a/src/pages/login/login.pcss
+++ b/src/pages/login/login.pcss
@@ -46,13 +46,21 @@
     padding: 7px 0 0;
 }
 
-.content-footer {
-    padding: 40px 30px 16px;
-    flex-grow: 0;
+.content-form__button {
+    flex-grow: 1;
+    display: flex;
+    align-items: flex-end;
+    padding-top: 40px;
 }
 
-.content-footer button{
-    margin-bottom: 2px;
+.content-form__button .button{
+    width: 100%;
+    padding: 12px 0;
+}
+
+.content-footer {
+    padding: 2px 30px 16px;
+    flex-grow: 0;
 }
 
 .content-footer .button{
