--- a/src/pages/profile/profile.pcss
+++ b/src/pages/profile/profile.pcss
@@ -111,3 +111,14 @@
     width: 280px;
     height: 37px;
 }
+
+.profile-form__button {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 60px;
+}
+
+.profile-form__button .button {
+    width: 280px;
+    height: 37px;
+}
