--- a/src/styles/styles.pcss
+++ b/src/styles/styles.pcss
@@ -20,6 +20,12 @@ body {
   font-weight: var(--font-weight-regular);
 }
 
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .navigation {
   display: flex;
   flex-direction: column;
@@ -50,3 +56,5 @@ body {
   color: var(--white-1);
   font-size: 10px;
 }
+
+
