--- a/src/partials/chat-item/chat-item.hbs
+++ b/src/partials/chat-item/chat-item.hbs
@@ -2,7 +2,7 @@
     <div class="item-avatar">
         <div class="avatar-wrap">
             {{#if avatarURL}}
-            <img class="avatar-picture" src="{{avatarURL}}" alt=""/>
+            <img class="avatar-picture" src="{{avatarURL}}" alt="avatar"/>
             {{/if}}
         </div>
     </div>
