--- a/src/pages/error/500.hbs
+++ b/src/pages/error/500.hbs
@@ -1,26 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../../styles/styles.pcss">
-    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
-</head>
-<body>
-    <main class="page">
-        <div class="error-page__content">
-            <h1 class="error-page__title title">
-                500
-            </h1>
-            <div class="error-page__text base-text">
-                Мы уже фиксим
-            </div>
-            <div class="error-page__action">
-                <a href="../signin/signin.hbs" class="button button_secondary" tabindex="0">Назад к чатам</a>
-            </div>
+---
+title: Ошибка 500
+---
+
+{{!< default}}
+<main class="page">
+    <div class="error-page__content">
+        <h1 class="error-page__title title">
+            500
+        </h1>
+        <div class="error-page__text base-text">
+            Мы уже фиксим
         </div>
-    </main>
-</body>
-</html>
+        <div class="error-page__action">
+            <a href="../signin/signin.hbs" class="button button_secondary" tabindex="0">Назад к чатам</a>
+        </div>
+    </div>
+</main>
