EOF fix & css variables fix

--- a/src/pages/profile/profile.pcss
+++ b/src/pages/profile/profile.pcss
@@ -48,7 +48,7 @@
     align-items: center;
     background: rgba(0,0,0,0.5);
     border-radius: 50%;
-    color: var(--white-1);
+    color: var(--white);
     visibility: hidden;
     text-align: center;
 }
