--- a/src/partials/back-panel/back-panel.pcss
+++ b/src/partials/back-panel/back-panel.pcss
@@ -10,7 +10,7 @@
 
     &__link {
         text-decoration: none;
-        color: var(--white-1);
+        color: var(--white);
         line-height: 28px;
         background: var(--blue-1);
         width: 28px;
