--- a/src/partials/chat-item/chat-item.pcss
+++ b/src/partials/chat-item/chat-item.pcss
@@ -77,7 +77,7 @@
     background: var(--blue-1);
     width: 20px;
     height: 20px;
-    color: var(--white-1);
+    color: var(--white);
     border-radius: 10px;
     flex-wrap: wrap;
     place-content: center;
