--- a/src/styles/fonts.pcss
+++ b/src/styles/fonts.pcss
@@ -28,7 +28,7 @@
 
 .error-message {
   font-family: var(--font-family);
-  color: var(--red-1);
+  color: var(--red);
   font-size: 8px;
   line-height: 8px;
 }
