--- a/src/styles/styles.pcss
+++ b/src/styles/styles.pcss
@@ -47,14 +47,12 @@ body {
   margin-bottom: 2px;
   text-align: center;
   border-radius: 5px;
-  background: var(--black-1);
+  background: var(--black);
 }
 
 .nav-link {
   display: block;
   text-decoration: none;
-  color: var(--white-1);
+  color: var(--white);
   font-size: 10px;
 }
-
-
