--- a/src/styles/variables.pcss
+++ b/src/styles/variables.pcss
@@ -1,8 +1,4 @@
 :root {
-  --main-color: #272838;
-  --text-color: #f9f8f8;
-  --main-bg-color: #f3de8a;
-
   --blue-1: #3369f3;
   --blue-2: #e4edfd;
 
@@ -12,13 +8,10 @@
   --grey-4: #efefef;
   --grey-5: #eaeaea;
 
-  --white-1: #ffffff;
-  --black-1: #000000;
+  --white: #ffffff;
+  --black: #000000;
   
-  --red-1: #ff2f2f;
-
-  --color-text: var(--grey-1);
-  --color-error: var(--red-3);
+  --red: #ff2f2f;
 
   --widnow-border-radius: 12px;
 }
