--- a/src/pages/chat/chat.hbs
+++ b/src/pages/chat/chat.hbs
@@ -11,21 +11,21 @@
         
         <div class="chat-items">
 
-            {{> chat-item/chat-item chatName="Андрей" lastActivity="12:00" previewText="Изображение" newMessageCounter="2" }}
-            {{> chat-item/chat-item chatName="Киноклуб" lastActivity="10:55" isMine=true previewText="стикер" }}
-            {{> chat-item/chat-item chatName="Илья" lastActivity="09:50" previewText="Друзья, у меня для вас особенный выпуск новостей!..." newMessageCounter="5" }}
-            {{> chat-item/chat-item chatName="Вадим" lastActivity="Пт" isMine=true previewText="Круто!" }}
-            {{> chat-item/chat-item chatName="тет-а-теты" lastActivity="Ср" isMine=true previewText="И Human Interface Guidelines и Material Design рекомендуют..." }}
-            {{> chat-item/chat-item chatName="1, 2, 3" lastActivity="Пн" previewText="Миллионы россиян ежедневно проводят десятки часов свое..." }}
-            {{> chat-item/chat-item chatName="Crazy Kitty" lastActivity="21 апреля" previewText="Meow meow meow meow meow meow..." newMessageCounter="10" avatarURL="../../../static/cat.jpeg" }}
-            {{> chat-item/chat-item chatName="Алексей" lastActivity="18 марта" previewText="стикер" }}
-            {{> chat-item/chat-item chatName="Николай" lastActivity="10 ноября" previewText="стикер" }}
-            {{> chat-item/chat-item chatName="Алёна" lastActivity="16 августа" previewText="стикер" }}
-            {{> chat-item/chat-item chatName="Карлос" lastActivity="10 мая"previewText="стикер" }}
-            {{> chat-item/chat-item chatName="Джонни" lastActivity="17 апреля 2022"previewText="стикер" }}
-            {{> chat-item/chat-item chatName="Василий" lastActivity="18 января 2022" isMine=true previewText="стикер" }}
-            {{> chat-item/chat-item chatName="Денис" lastActivity="9 октября 2021" isMine=true previewText="Привет друг! Давно не виделись..." }}
-            {{> chat-item/chat-item chatName="Аня" lastActivity="17 июля 2020" previewText="Не пиши мне больше!" }}
+            {{> chat-item/chat-item name="Андрей" lastActivity="12:00" text="Изображение" counter="2" }}
+            {{> chat-item/chat-item name="Киноклуб" lastActivity="10:55" isMine=true text="стикер" }}
+            {{> chat-item/chat-item name="Илья" lastActivity="12:00" text="Друзья, у меня для вас особенный выпуск новостей!..." counter="5" }}
+            {{> chat-item/chat-item name="Вадим" lastActivity="Пт" isMine=true text="Круто!" }}
+            {{> chat-item/chat-item name="тет-а-теты" lastActivity="Ср" isMine=true text="И Human Interface Guidelines и Material Design рекомендуют..."}}
+            {{> chat-item/chat-item name="1, 2, 3" lastActivity="Пн" text="Миллионы россиян ежедневно проводят десятки часов свое..."}}
+            {{> chat-item/chat-item name="Crazy Kitty" lastActivity="12:00" text="Meow meow meow meow meow meow..." counter="10" avatarURL="../../../static/cat.jpeg"}}
+            {{> chat-item/chat-item name="Алексей" lastActivity="18 марта" text="стикер" }}
+            {{> chat-item/chat-item name="Николай" lastActivity="10 ноября" text="стикер"}}
+            {{> chat-item/chat-item name="Алёна" lastActivity="16 августа" text="стикер"}}
+            {{> chat-item/chat-item name="Карлос" lastActivity="10 мая" text="стикер"}}
+            {{> chat-item/chat-item name="Джонни" lastActivity="17 апреля 2022" text="стикер" }}
+            {{> chat-item/chat-item name="Василий" lastActivity="18 января 2022" isMine=true text="стикер" }}
+            {{> chat-item/chat-item name="Денис" lastActivity="9 октября 2021" isMine=true text="Привет друг! Давно не виделись..."}}
+            {{> chat-item/chat-item name="Аня" lastActivity="17 июля 2020" text="Не пиши мне больше!"}}
 
     </aside>
 
