--- a/src/pages/chat/chat.pcss
+++ b/src/pages/chat/chat.pcss
@@ -9,6 +9,7 @@
     height: 100vh;
     background: var(--grey-3);
     border-right: 1px solid var(--grey-5);
+    box-sizing: border-box;
 }
 
 .chats_sidebar-header {
@@ -47,8 +48,7 @@
 }
 
 .chat-items {
-    border-top: 1px solid var(--grey-5);
-    height: calc(100vh - 102px);
+    height: calc(100vh - 92px);
     overflow: scroll;
 }
 
