--- a/src/partials/chat-item/chat-item.pcss
+++ b/src/partials/chat-item/chat-item.pcss
@@ -1,86 +1,102 @@
 .chat-item {
-    border-bottom: 1px solid var(--grey-5);
-    padding: 12px 10px;
-    display: flex;
-}
-
-.chat-item:hover {
-    background: var(--blue-2);
-}
-
-.item-avatar {
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    flex-wrap: wrap;
-    padding-right: 10px;
-}
-
-.avatar-wrap {
-    width: 47px;
-    height: 47px;
-    background: var(--grey-4);
-    border-radius: 50%;
-    overflow: hidden;
-}
-
-.avatar-picture {
-    width: 100%;
-    height: 100%;
-}
-
-.item-content {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-}
-
-.item-header {
+    padding: 10px;
+    margin-top: 5px;
+    position:relative;
     display: flex;
     justify-content: space-between;
-    padding: 0px 0px 4px 0px;
-}
 
-.chat-name {
-    font-size: 13px;
-    font-weight: 600;
-    color: var(--grey-1);
-}
+    &:before {
+        content: "";
+        width: 290px;
+        height: 1px;
+        background:var(--grey-5);
+        position: absolute;
+        top: -3px;
+        left: 10px;
+    }
 
-.last-activity-date {
-    font-size: 9px;
-    color: var(--grey-2);
-}
+    &:hover {
+        background: var(--blue-2);
+    }
 
-.item-footer {
-    display: flex;
-    align-items: flex-start;
-}
+    &_selected {
+        background: var(--blue-2);
+    }
 
-.my-message {
-    font-weight: var(--font-weight-bold);
-    color: var(--grey-1);
-}
+    &__avatar {
+        width: 47px;
+        height: 47px;
+        border-radius: 50%;
+        overflow: hidden;
+        flex: 0 0 auto;
+    }
 
-.last-message-fragment {
-    font-size: 12px;
-    color: var(--grey-2);
-    padding-right: 10px;
-    flex-grow: 1;
-}
+    &__image {
+        width: 47px;
+        height: 47px;
+    }
 
-.counter-wrap {
-    align-self: end;
-}
+    &__info {
+        flex: 1 1 auto;
+        display:flex;
+        justify-content: space-between;
+        flex-direction: column;
+        row-gap: 4px;
+        padding-left: 10px;
+    }
 
-.new-messages-counter {
-    background: var(--blue-1);
-    width: 20px;
-    height: 20px;
-    color: var(--white);
-    border-radius: 10px;
-    flex-wrap: wrap;
-    place-content: center;
-    font-size: 11px;
-    display: flex;
+    &__row {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__header {
+        flex: 0 0 auto;
+    }
+
+    &__footer {
+        flex: 1 1 auto;
+    }
+
+    &__name {
+        font-size: 13px;
+        line-height: 13px;
+        font-weight: var(--font-weight-bold);
+        color: var(--grey-1);
+        flex: 1 1 auto;
+    }
+
+    &__date {
+        color: var(--grey-2); 
+        font-size: 9px;
+        align-self: flex-start;
+        flex: 0 0 auto;
+    }
+
+    &__text {
+        color: var(--grey-2);
+        font-size: 12px;
+        line-height: 15px;
+        max-width: 212px;
+        padding-right: 10px;
+    }
+
+    &__my-message {
+        font-weight: var(--font-weight-bold);
+        color: var(--grey-1);
+    }
+
+    &__counter {
+        background: var(--blue-1);
+        color: var(--white);
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        font-size: 11px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        align-self: flex-end
+    }
+
 }
