chat page refactoring

--- a/src/pages/chat/chat.hbs
+++ b/src/pages/chat/chat.hbs
@@ -3,7 +3,10 @@
 <div class="chats">
     <aside class="chats_sidebar">
         <div class="chats_sidebar-header">
-            <a href="../profile/profile.hbs" class="profile-link" tabindex="0">Профиль -&gt;</a>
+            <a href="../profile/profile.hbs" class="profile-link" tabindex="0">
+                Профиль
+                <div class="profile-link-icon"></div>
+            </a>
             <div class="chats_sidebar-search">
                 <input class="search-input" type="search" name="search" id="sidebar-search-input" value="" placeholder="Поиск"/>
             </div>
