input component refactoring

--- a/src/partials/input/input.hbs
+++ b/src/partials/input/input.hbs
@@ -5,7 +5,7 @@
         default
     {{~/if~}}">
     
-    <label class="input-label input-label" for="{{name}}">
+    <label class="input-label" for="{{name}}">
         {{label}}
     </label>
     
