--- a/src/styles/styles.pcss
+++ b/src/styles/styles.pcss
@@ -1,8 +1,8 @@
 @import "./variables.pcss";
-@import "../partials/input/input.pcss";
-@import "../partials/button/button.pcss";
-@import "../partials/chat-item/chat-item.pcss";
-@import "../partials/back-panel/back-panel.pcss";
+@import "../components/input/input.pcss";
+@import "../components/button/button.pcss";
+@import "../components/chat-item/chat-item.pcss";
+@import "../components/back-panel/back-panel.pcss";
 @import "./fonts.pcss";
 
 @import "../pages/login/login.pcss";
