add chat-feed to chat-page

--- a/src/pages/chat/chat.hbs
+++ b/src/pages/chat/chat.hbs
@@ -1,3 +1,57 @@
+---
+conversation:
+  name: "Вадим"
+  avatarURL: "../../../static/cat.jpeg"
+
+data:
+- date: 19 июня
+  messages:
+    - type: text
+      isText: true
+      time: "11:56"
+      isMine: false
+      content:
+        text: Привет! Смотри, тут всплыл интересный кусок лунной космической истории — НАСА в какой-то момент попросила Хассельблад адаптировать модель SWC для полетов на Луну. Сейчас мы все знаем что астронавты летали с моделью 500 EL — и к слову говоря, все тушки этих камер все еще находятся на поверхности Луны, так как астронавты с собой забрали только кассеты с пленкой.\n\nХассельблад в итоге адаптировал SWC для космоса, но что-то пошло не так и на ракету они так никогда и не попали. Всего их было произведено 25 штук, одну из них недавно продали на аукционе за 45000 евро.
+    - type: image
+      isImage: true
+      time: "11:56"
+      isMine: false
+      content:
+        url: ../../../static/hasselblad.png
+        width: 316
+        height: 211
+    - type: text
+      isText: true
+      time: "12:00"
+      isMine: true
+      content:
+        text: Круто!
+        readed: true
+    - type: text
+      isText: true
+      time: "12:00"
+      isMine: true
+      content:
+        text: Тогда в продолжение темы космоса кину картинку...
+        readed: true
+    - type: image
+      isImage: true
+      time: "12:07"
+      isMine: true
+      content:
+        url: ../../../static/space.png
+        width: 316
+        height: 202
+        readed: true
+    - type: text
+      isText: true
+      time: "12:08"
+      isMine: true
+      content:
+        text: Круто же?
+        readed: true
+---
+
 {{!< default}}
 
 <div class="chats">
@@ -11,13 +65,13 @@
                 <input class="search-input" type="search" name="search" id="sidebar-search-input" value="" placeholder="Поиск"/>
             </div>
         </div>
-        
+
         <div class="chat-items">
 
             {{> chat-item/chat-item name="Андрей" lastActivity="12:00" text="Изображение" counter="2" }}
             {{> chat-item/chat-item name="Киноклуб" lastActivity="10:55" isMine=true text="стикер" }}
             {{> chat-item/chat-item name="Илья" lastActivity="12:00" text="Друзья, у меня для вас особенный выпуск новостей!..." counter="5" }}
-            {{> chat-item/chat-item name="Вадим" lastActivity="Пт" isMine=true text="Круто!" }}
+            {{> chat-item/chat-item name="Вадим" lastActivity="Пт" isMine=true text="Круто же?" }}
             {{> chat-item/chat-item name="тет-а-теты" lastActivity="Ср" isMine=true text="И Human Interface Guidelines и Material Design рекомендуют..."}}
             {{> chat-item/chat-item name="1, 2, 3" lastActivity="Пн" text="Миллионы россиян ежедневно проводят десятки часов свое..."}}
             {{> chat-item/chat-item name="Crazy Kitty" lastActivity="12:00" text="Meow meow meow meow meow meow..." counter="10" avatarURL="../../../static/cat.jpeg"}}
@@ -32,7 +86,7 @@
 
     </aside>
 
-    <main class="chat_feed">
-        <span>Выберите чат чтобы отправить сообщение</span>
+    <main>
+        {{> conversation/conversation conversation=conversation data=data}}
     </main>
 </div>
