--- a/src/styles/styles.pcss
+++ b/src/styles/styles.pcss
@@ -3,6 +3,8 @@
 @import "../components/button/button.pcss";
 @import "../components/chat-item/chat-item.pcss";
 @import "../components/back-panel/back-panel.pcss";
+@import "../components/conversation/conversation.pcss";
+@import "../components/chat-feed/chat-feed.pcss";
 @import "./fonts.pcss";
 
 @import "../pages/login/login.pcss";
