--- a/src/styles/variables.pcss
+++ b/src/styles/variables.pcss
@@ -7,10 +7,12 @@
   --grey-3: #fbfbfb;
   --grey-4: #efefef;
   --grey-5: #eaeaea;
+  --grey-6: rgba(82, 82, 82, 0.5);
 
   --white: #ffffff;
+  --white-alpha: rgba(255, 255, 255, 0.5);
   --black: #000000;
-  
+
   --red: #ff2f2f;
 
   --widnow-border-radius: 12px;
