button component update

--- a/src/pages/change-password/change-password.hbs
+++ b/src/pages/change-password/change-password.hbs
@@ -27,7 +27,7 @@ title: Смена пароля
                 {{> input/input name="newPassword" label="Повторите новый пароль" isPassword=true value="my-new-pa$$" error-msg="Пароли не совпадают" mode="error"}}
             </div>
             <div class="profile-form__button">
-                {{> button/button submit=true text="Сохранить" mode="primary"}}
+                {{> button/button submit=true label="Сохранить" mode="primary"}}
             </div>
         </form>
     </div>
