--- a/src/pages/edit-profile/edit-profile.hbs
+++ b/src/pages/edit-profile/edit-profile.hbs
@@ -30,7 +30,7 @@ title: Изменение профиля
                 {{> input/input name="phone" label="Телефон" value="+7 (909) 967 30 30"}}
             </div>
             <div class="profile-form__button">
-                {{> button/button submit=true text="Сохранить" mode="primary"}}
+                {{> button/button submit=true label="Сохранить" mode="primary"}}
             </div>
         </form>
     </div>
