--- a/src/pages/login/login.hbs
+++ b/src/pages/login/login.hbs
@@ -13,11 +13,11 @@ title: Вход
             {{> input/input name="password" label="Пароль" isPassword=true}}
 
             <div class="content-form__button">
-                {{> button/button text="Авторизоваться" submit=true mode="primary"}}
+                {{> button/button label="Авторизоваться" submit=true mode="primary"}}
             </div>
         </form>
         <div class="content-footer">
-            
+
             <a href="../signin/signin.hbs" class="button button_secondary" tabindex="0">Нет аккаунта?</a>
         </div>
     </div>
