--- a/src/pages/signin/signin.hbs
+++ b/src/pages/signin/signin.hbs
@@ -18,7 +18,7 @@ title: Регистрация
             {{> input/input name="password" label="Пароль" isPassword=true value="ivanivanov" mode="error"}}
             {{> input/input name="password_2" label="Пароль (ещё раз)" isPassword=true error-msg="Пароли не совпадают" value="ivanivanof" mode="error"}}
             <div class="content-form__button">
-                {{> button/button text="Зарегистрироваться" submit=true mode="primary"}}
+                {{> button/button label="Зарегистрироваться" submit=true mode="primary"}}
             </div>
         </form>
         <div class="content-footer">
