--- a/src/components/button/button.hbs
+++ b/src/components/button/button.hbs
@@ -1,3 +1,3 @@
 <button {{#if submit}} type="submit" {{else}} type="button" {{/if}} class="button button_{{mode}}">
-  {{text}}
+  {{label}}
 </button>
