--- a/src/pages/signin/signin.hbs
+++ b/src/pages/signin/signin.hbs
@@ -16,7 +16,7 @@ title: Регистрация
             {{> input/input name="second_name" label="Фамилия" value="Иванов"}}
             {{> input/input name="phone" label="Телефон" value="+7 (909) 967 30 30"}}
             {{> input/input name="password" label="Пароль" isPassword=true value="ivanivanov" mode="error"}}
-            {{> input/input name="password_2" label="Пароль (ещё раз)" isPassword=true error-msg="Пароли не совпадают" value="ivanivanof" mode="error"}}
+            {{> input/input name="password_2" label="Пароль (ещё раз)" isPassword=true errorMessage="Пароли не совпадают" value="ivanivanof" mode="error"}}
             <div class="content-form__button">
                 {{> button/button label="Зарегистрироваться" submit=true mode="primary"}}
             </div>
