--- a/src/components/back-panel/back-panel.hbs
+++ b/src/components/back-panel/back-panel.hbs
@@ -1,3 +1,6 @@
 <div class="back-panel">
-    <a href="{{ backURL }}" class="back-panel__link" tabindex="1">&lt;-</a>
+    <a href="{{ backURL }}" class="back-panel__link" tabindex="1">
+      <!-- &lt;- -->
+      <div class="back-panel__icon"></div>
+    </a>
 </div>
