--- a/src/components/back-panel/back-panel.pcss
+++ b/src/components/back-panel/back-panel.pcss
@@ -21,4 +21,13 @@
         justify-content: center;
         align-items: center;
     }
+
+    &__icon {
+      background: var(--blue-1) url("../../../static/arrow-1.svg") 8px 8px no-repeat;
+      width: 28px;
+      height: 28px;
+      border-radius:14px;
+      border: none;
+      box-sizing: border-box;
+    }
 }
