--- a/src/pages/change-password/change-password.hbs
+++ b/src/pages/change-password/change-password.hbs
@@ -24,7 +24,7 @@ title: Смена пароля
             <div class="lined">
                 {{> input/input name="oldPassword" label="Старый пароль" isPassword=true value="password"}}
                 {{> input/input name="newPassword" label="Новый пароль" isPassword=true value="my-new-pa$$w0rd" mode="error"}}
-                {{> input/input name="newPassword" label="Повторите новый пароль" isPassword=true value="my-new-pa$$" error-msg="Пароли не совпадают" mode="error"}}
+                {{> input/input name="newPassword" label="Повторите новый пароль" isPassword=true value="my-new-pa$$" errorMessage="Пароли не совпадают" mode="error"}}
             </div>
             <div class="profile-form__button">
                 {{> button/button submit=true label="Сохранить" mode="primary"}}
