--- a/src/pages/error/error.hbs
+++ b/src/pages/error/error.hbs
@@ -1,18 +1,13 @@
----
-title: Ошибка 500
----
-
-{{!< default}}
 <main class="page">
     <div class="error-page__content">
         <h1 class="error-page__title title">
-            500
+            {{errorCode}}
         </h1>
         <div class="error-page__text base-text">
-            Мы уже фиксим
+            {{messageText}}
         </div>
         <div class="error-page__action">
-            <a href="../signin/signin.hbs" class="button button_secondary" tabindex="0">Назад к чатам</a>
+            <a href="{{link}}" class="button button_secondary" tabindex="0">{{linkLabel}}</a>
         </div>
     </div>
 </main>
