--- a/src/styles/styles.pcss
+++ b/src/styles/styles.pcss
@@ -5,6 +5,7 @@
 @import "../components/back-panel/back-panel.pcss";
 @import "../components/conversation/conversation.pcss";
 @import "../components/chat-feed/chat-feed.pcss";
+@import "../components/message/message.pcss";
 @import "./fonts.pcss";
 
 @import "../pages/login/login.pcss";
