input component update

--- a/src/components/chat-feed/chat-feed.hbs
+++ b/src/components/chat-feed/chat-feed.hbs
@@ -1,4 +1,5 @@
 <div class="chat-feed">
+    <div class="chat-feed__date-delimeter ">19 июня</div>
     {{#each messages}}
         {{{this}}}
     {{/each}}
