--- a/src/pages/login/login.pcss
+++ b/src/pages/login/login.pcss
@@ -32,17 +32,17 @@
     flex-grow: 1;
 }
 
-.content-form .input-label {
+.content-form .input__label {
     padding: 3px 0;
 }
 
-.content-form .input-field {
+.content-form .input__field {
     width: 100%;
     border-bottom: 1px solid var(--blue-1);
     outline: none;
 }
 
-.content-form .input-validation-message {
+.content-form .input__error-message {
     padding: 7px 0 0;
 }
 
