--- a/src/pages/profile/profile.pcss
+++ b/src/pages/profile/profile.pcss
@@ -66,20 +66,20 @@
     flex-grow: 1;
 }
 
-.profile-data .input-wrap {
+.profile-data .input {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
 }
 
-.profile-data .input-label{
+.profile-data .input__label{
     width: 50%;
     font-size: 13px;
     line-height: 32px;
     color: var(--grey-1);
 }
 
-.profile-data .input {
+.profile-data .input__field {
     display: block;
     width: 50%;
     text-align: right;
