--- a/src/components/input/input.pcss
+++ b/src/components/input/input.pcss
@@ -1,32 +1,44 @@
-.input-wrap {
+.input {
     flex-grow: 0;
-}
 
-.input-label {
-  display: block;
-}
+    &__label {
+        color: var(--grey-2);
+        font-size: 9px;
+        line-height: 9px;
+        display: block;
+    }
 
-.input-field {
-  display: block;
-  border: 1px solid var(--white);
-  height: 32px;
-  padding: 4px 5px;
-}
+    &__field {
+        display: block;
+        border: 1px solid var(--white);
+        height: 32px;
+        padding: 4px 5px;
+        font-family: var(--font-family);
+        color: var(--grey-1);
+        font-size: 13px;
+        line-height: 13px;
 
-.input-field:focus {
-  background: var(--blue-2);
-}
+        &_danger {
+            color: var(--red);
+        }
 
-.input-field[disabled] {
-    color: var(--grey-2);
-    background: var(--white);
-}
+        &[disabled] {
+            color: var(--grey-2);
+            background: var(--white);
+        }
 
-.input-validation-message {
-  display: block;
-  min-height: 15px;
-}
+        &:focus {
+            background: var(--blue-2);
+        }
+    }
 
-.input_mode_error .input-field {
-  color: var(--red);
+    &__error-message {
+            display: block;
+            min-height: 15px;
+            font-family: var(--font-family);
+            color: var(--red);
+            font-size: 8px;
+            line-height: 8px;
+            /*padding: 7px 0 0;*/
+        }
 }
