add send message form component & apdate utils

--- a/src/components/chat-item/chat-item.hbs
+++ b/src/components/chat-item/chat-item.hbs
@@ -3,7 +3,7 @@
         {{#if avatarURL}}
         <img class="chat-item__image" src="{{avatarURL}}" alt="avatar for {{name}}"/>
         {{else}}
-        <img class="chat-item__image" src="../static/default-avatar.svg" alt="no image avatar"/>
+        <img class="chat-item__image" src="{{defualtAvatarURL}}" alt="no image avatar"/>
         {{/if}}
     </div>
     <div class="chat-item__info">
