--- a/src/components/input/input.hbs
+++ b/src/components/input/input.hbs
@@ -4,7 +4,7 @@
         {{label}}
     </label>
     {{/if}}
-    <input class="input__field {{#if danger}}input__field_danger{{/if}}" type="{{type}}" name="{{name}}" id="{{name}}" value="{{value}}" {{#if disabled}}disabled{{/if}}/>
+    <input class="input__field {{#if danger}}input__field_danger{{/if}}" type="{{type}}" name="{{name}}" id="{{name}}" value="{{value}}" {{#if disabled}}disabled{{/if}} {{#if placeholder}}placeholder="{{placeholder}}"{{/if}}/>
     {{#if enableErrorMessage}}
     <span class="input__error-message">
         {{errorMessage}}
