--- a/src/styles/styles.pcss
+++ b/src/styles/styles.pcss
@@ -6,6 +6,7 @@
 @import "../components/conversation/conversation.pcss";
 @import "../components/chat-feed/chat-feed.pcss";
 @import "../components/message/message.pcss";
+@import "../components/send-message-form/send-message-form.pcss";
 @import "./fonts.pcss";
 
 @import "../pages/login/login.pcss";
