update button component

--- a/src/components/button/button.hbs
+++ b/src/components/button/button.hbs
@@ -1,3 +1,4 @@
-<button {{#if submit}} type="submit" {{else}} type="button" {{/if}} class="button button_{{mode}}">
+<button type="{{#if submit}}submit{{else}}button{{/if}}" class="{{className}}">
   {{label}}
 </button>
+<!-- button button_{{mode}}  -->
