--- a/src/components/send-message-form/send-message-form.hbs
+++ b/src/components/send-message-form/send-message-form.hbs
@@ -1,5 +1,7 @@
 <form class="send-message-form">
-    <button class="send-message-form__attach-button"></button>
+    <!--<button class="send-message-form__attach-button"></button>-->
+    {{{buttonAttachment}}}
     {{{inputMessage}}}
-    <button class="send-message-form__send-button" type="submit"></button>
+    {{{buttonSendMessage}}}
+    <!--<button class="send-message-form__send-button" type="submit"></button>-->
 </form>
