add validation on pages: [login, signin, change-password]

--- a/src/pages/change-password/change-password.hbs
+++ b/src/pages/change-password/change-password.hbs
@@ -18,7 +18,7 @@ title: Смена пароля
               </div>
           </div>
 
-          <form action="" method="post" class="form profile-data">
+          <form action="" id="edit-profile-form" method="post" class="form profile-data">
               <div class="lined">
                   {{{inputOldPassword}}}
                   {{{inputNewPassword}}}
