--- a/src/pages/login/login.hbs
+++ b/src/pages/login/login.hbs
@@ -7,7 +7,7 @@ title: Вход
         <h1 class="content-title title">
             Вход
         </h1>
-        <form action="" method="post" class="form content-form">
+        <form action="" id="login-form" method="post" class="form content-form">
             {{{inputLogin}}}
             {{{inputPassword}}}
             <div class="content-form__button">
