--- a/src/pages/signin/signin.hbs
+++ b/src/pages/signin/signin.hbs
@@ -7,7 +7,7 @@ title: Регистрация
         <h1 class="content-title title">
             Регистрация
         </h1>
-        <form action="" method="post" class="form content-form">
+        <form action="" id="signin-form" method="post" class="form content-form">
             {{{inputEmail}}}
             {{{inputLogin}}}
             {{{inputFirstName}}}
