add validation on pages[edit-profile, chat]

--- a/src/components/send-message-form/send-message-form.hbs
+++ b/src/components/send-message-form/send-message-form.hbs
@@ -1,7 +1,5 @@
-<form class="send-message-form">
-    <!--<button class="send-message-form__attach-button"></button>-->
+<form id="send-message-form" class="send-message-form">
     {{{buttonAttachment}}}
     {{{inputMessage}}}
     {{{buttonSendMessage}}}
-    <!--<button class="send-message-form__send-button" type="submit"></button>-->
 </form>
