--- a/src/components/button/button.hbs
+++ b/src/components/button/button.hbs
@@ -1,4 +1,4 @@
-<button type="{{#if submit}}submit{{else}}button{{/if}}" class="{{className}}">
+<button type="{{#if submit}}submit{{else}}button{{/if}}" class="{{className}}" {{#if disabled}}disabled{{/if}}>
   {{label}}
 </button>
 <!-- button button_{{mode}}  -->
