--- a/src/pages/edit-profile/edit-profile.hbs
+++ b/src/pages/edit-profile/edit-profile.hbs
@@ -18,7 +18,7 @@ title: Изменение профиля
               </div>
           </div>
 
-          <form action="" method="post" class="form profile-data">
+          <form action="" id="edit-profile-form" method="post" class="form profile-data">
               <div class="lined">
                   {{{inputEmail}}}
                   {{{inputLogin}}}
