eslint & stylint check

--- a/src/components/chat-item/chat-item.pcss
+++ b/src/components/chat-item/chat-item.pcss
@@ -5,8 +5,8 @@
     display: flex;
     justify-content: space-between;
 
-    &:before {
-        content: "";
+    &::before {
+        content: '';
         width: 290px;
         height: 1px;
         background:var(--grey-5);
@@ -67,7 +67,7 @@
     }
 
     &__date {
-        color: var(--grey-2); 
+        color: var(--grey-2);
         font-size: 9px;
         align-self: flex-start;
         flex: 0 0 auto;
