--- a/src/components/send-message-form/send-message-form.pcss
+++ b/src/components/send-message-form/send-message-form.pcss
@@ -8,12 +8,12 @@
     &__attach-button {
         width: 32px;
         height: 32px;
-        background: url("../../../static/attach.svg") 0px 0px no-repeat;
+        background: url("../../../static/attach.svg") 0 0 no-repeat;
         border: none;
         box-sizing: border-box;
 
         &:hover {
-            background: url("../../../static/attach-hover.svg") 0px 0px no-repeat;
+            background: url("../../../static/attach-hover.svg") 0 0 no-repeat;
         }
     }
 
@@ -37,6 +37,6 @@
     border-radius: 16px;
     border: none;
     background: var(--grey-4);
-    padding: 0px 20px;
+    padding: 0 20px;
     width: 100%;
 }
