--- a/src/components/button/button.pcss
+++ b/src/components/button/button.pcss
@@ -12,7 +12,7 @@
     font-weight: var(--font-weight-medium);
     background-color: var(--blue-1);
     border: 1px solid var(--blue-1);
-    color: #ffffff;
+    color: var(--white);
 }
 
 .button_secondary {
