--- a/src/components/message/message.pcss
+++ b/src/components/message/message.pcss
@@ -11,7 +11,7 @@
   position:relative;
 
   &__text {
-    padding: 10px 10px 0px 10px;
+    padding: 10px 10px 0;
     font-size: 12px;
     line-height: 15px;
   }
@@ -32,7 +32,7 @@
     color: var(--grey-2);
     display: flex;
     line-height: 13px;
-    padding: 5px 10px 5px 0px;
+    padding: 5px 10px 5px 0;
 
     &-cover {
       position: absolute;
@@ -40,7 +40,7 @@
       right: 11px;
       background: var(--grey-6);
       color: var(--white);
-      padding: 0px 5px;
+      padding: 0 5px;
       border-radius: 7px;
       line-height: 13px;
       display: flex;
@@ -61,11 +61,11 @@
     margin-right: 2px;
 
     &-readed {
-      background: url("../../../static/status-readed.svg") 0px 4px no-repeat;
+      background: url("../../../static/status-readed.svg") 0 4px no-repeat;
     }
 
     &-sended {
-      background: url("../../../static/status-sended.svg") 0px 4px no-repeat;
+      background: url("../../../static/status-sended.svg") 0 4px no-repeat;
     }
   }
 }
