--- a/src/pages/chat/chat.pcss
+++ b/src/pages/chat/chat.pcss
@@ -44,7 +44,7 @@
 .search-input{
     display: block;
     width: 100%;
-    background: transparent url("../../../static/magnifier.svg") no-repeat 0px center;
+    background: transparent url("../../../static/magnifier.svg") no-repeat;
     border: none;
     font-size: 12px;
     outline: none;
