--- a/src/pages/login/login.pcss
+++ b/src/pages/login/login.pcss
@@ -1,5 +1,5 @@
 :root {
-  --window-shadow: 0px 0px 6px rgba(0, 0, 0, 0.14);
+  --window-shadow: 0px 0px 6px rgba(0 0 0 14%);
 }
 
 .page {
@@ -22,13 +22,13 @@
 
 .content-title {
     text-align: center;
-    padding: 50px 30px 0px 30px;
-    margin: 0px;
+    padding: 50px 30px 0;
+    margin: 0;
     flex-grow: 0;
 }
 
 .content-form {
-    padding: 40px 30px 0px 30px;
+    padding: 40px 30px 0;
     flex-grow: 1;
 }
 
