--- a/src/pages/profile/profile.pcss
+++ b/src/pages/profile/profile.pcss
@@ -46,7 +46,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: rgba(0,0,0,0.5);
+    background: rgba(0 0 0 50%);
     border-radius: 50%;
     color: var(--white);
     visibility: hidden;
