--- a/src/styles/styles.pcss
+++ b/src/styles/styles.pcss
@@ -1,18 +1,17 @@
-@import "./variables.pcss";
-@import "../components/input/input.pcss";
-@import "../components/button/button.pcss";
-@import "../components/chat-item/chat-item.pcss";
-@import "../components/back-panel/back-panel.pcss";
-@import "../components/conversation/conversation.pcss";
-@import "../components/chat-feed/chat-feed.pcss";
-@import "../components/message/message.pcss";
-@import "../components/send-message-form/send-message-form.pcss";
-@import "./fonts.pcss";
-
-@import "../pages/login/login.pcss";
-@import "../pages/error/error.pcss";
-@import "../pages/chat/chat.pcss";
-@import "../pages/profile/profile.pcss";
+@import url('./variables.pcss');
+@import url('../components/input/input.pcss');
+@import url('../components/button/button.pcss');
+@import url('../components/chat-item/chat-item.pcss');
+@import url('../components/back-panel/back-panel.pcss');
+@import url('../components/conversation/conversation.pcss');
+@import url('../components/chat-feed/chat-feed.pcss');
+@import url('../components/message/message.pcss');
+@import url('../components/send-message-form/send-message-form.pcss');
+@import url('./fonts.pcss');
+@import url('../pages/login/login.pcss');
+@import url('../pages/error/error.pcss');
+@import url('../pages/chat/chat.pcss');
+@import url('../pages/profile/profile.pcss');
 
 * {
   box-sizing: border-box;
