code style optimization

--- a/src/styles/variables.pcss
+++ b/src/styles/variables.pcss
@@ -6,7 +6,7 @@
   --grey-3: #fbfbfb;
   --grey-4: #efefef;
   --grey-5: #eaeaea;
-  --grey-6: rgba(82 82 82 50%);
+  --grey-6: rgb(82 82 82 / 50%);
   --white: #fff;
   --black: #000;
   --red: #ff2f2f;
