updated pages: [login, profile, edit profile]

--- a/src/pages/profile/profile.hbs
+++ b/src/pages/profile/profile.hbs
@@ -31,13 +31,13 @@ title: Профиль
 
         <div class="profile-footer lined">
             <div class="profile-action-link">
-                <a href="./edit-profile" class="button button_secondary" tabindex="0">Изменить данные</a>
+                {{{buttonEditProfile}}}
             </div>
             <div class="profile-action-link">
-                <a href="./change-password" class="button button_secondary" tabindex="1">Изменить пароль</a>
+                {{{buttonChangePassword}}}
             </div>
             <div class="profile-action-link">
-                <a href="./login" class="button button_dangerous" tabindex="2">Выйти</a>
+                {{{buttonLogout}}}
             </div>
         </div>
     </div>
