--- a/src/components/button/button.pcss
+++ b/src/components/button/button.pcss
@@ -6,6 +6,7 @@
     line-height: 13px;
     text-decoration: none;
     display: block;
+    padding: 0;
 }
 
 .button_primary {
@@ -23,5 +24,8 @@
 }
 
 .button_dangerous {
+    font-weight: var(--font-weight-medium);
+    background-color: var(--white-1);
+    border: 1px solid var(--white-1);
     color: var(--red);
 }
