update change-password page

--- a/src/pages/chat/chat.hbs
+++ b/src/pages/chat/chat.hbs
@@ -54,7 +54,7 @@ conversation:
 <div class="chats">
     <aside class="chats_sidebar">
         <div class="chats_sidebar-header">
-            <a href="../profile" class="profile-link" tabindex="0">
+            <a href="../settings" class="profile-link" tabindex="0">
                 Профиль
                 <div class="profile-link-icon"></div>
             </a>
