add component [avatarEditable, modal(dummy)

--- a/src/pages/profile/profile.pcss
+++ b/src/pages/profile/profile.pcss
@@ -23,6 +23,7 @@
     flex-grow: 0;
 }
 
+/*
 .profile-image-wrap {
     padding-bottom: 21px;
 }
@@ -56,6 +57,7 @@
 .profile-image:hover .change-image-msg {
     visibility: visible;
 }
+*/
 
 .profile-name {
     color: var(--grey-1);
