--- a/src/styles/styles.pcss
+++ b/src/styles/styles.pcss
@@ -7,6 +7,8 @@
 @import url('../components/chat-feed/chat-feed.pcss');
 @import url('../components/message/message.pcss');
 @import url('../components/send-message-form/send-message-form.pcss');
+@import url('../components/modal/modal.pcss');
+@import url('../components/avatar-editable/avatar-editable.pcss');
 @import url('./fonts.pcss');
 @import url('../pages/login/login.pcss');
 @import url('../pages/error/error.pcss');
