--- a/src/styles/variables.pcss
+++ b/src/styles/variables.pcss
@@ -7,6 +7,7 @@
   --grey-4: #efefef;
   --grey-5: #eaeaea;
   --grey-6: rgb(82 82 82 / 50%);
+  --grey-7: rgb(0 0 0 / 40%);
   --white: #fff;
   --black: #000;
   --red: #ff2f2f;
