--- a/src/components/modal/modal.hbs
+++ b/src/components/modal/modal.hbs
@@ -2,7 +2,7 @@
     {{#if isOpen}}
     <div class="backdrop">
         <div class="modal">
-            <h1 class="modal-title title">
+            <h1 class="modal-title">
                 {{title}}
             </h1>
 
