--- a/src/components/modal/modal.pcss
+++ b/src/components/modal/modal.pcss
@@ -27,3 +27,17 @@
     margin: 0;
     flex-grow: 0;
 }
+
+.button_modal {
+    width: 100%;
+    padding: 12px 0;
+}
+
+.modal-form {
+    padding: 40px 0 0;
+    min-height: 150px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+}
