refactor(stage 1) - Login page

--- a/src/pages/login/login.hbs
+++ b/src/pages/login/login.hbs
@@ -15,7 +15,7 @@ title: Вход
             </div>
         </form>
         <div class="content-footer">
-            <a href="../signin" class="button button_secondary" tabindex="0">Нет аккаунта?</a>
+            <a href="../sign-up" class="button button_secondary" tabindex="0">Нет аккаунта?</a>
         </div>
     </div>
 </main>
