--- a/src/pages/login/login.hbs
+++ b/src/pages/login/login.hbs
@@ -1,7 +1,3 @@
----
-title: Вход
----
-
 <main class="page">
     <div class="content-wrap">
         <h1 class="content-title title">
@@ -10,6 +6,7 @@ title: Вход
         <form action="" id="login-form" method="post" class="form content-form">
             {{{inputLogin}}}
             {{{inputPassword}}}
+            <div class="content-form__error">{{store.state.loginFormError}}</div>
             <div class="content-form__button">
                 {{{button}}}
             </div>
