--- a/src/pages/chat/chat.pcss
+++ b/src/pages/chat/chat.pcss
@@ -19,6 +19,26 @@
     padding: 11px 10px;
 }
 
+.chats_sidebar-header-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.chats_create-button {
+    background: var(--blue-1) url("../../../static/options.svg") 11px 4px no-repeat;
+    box-sizing: border-box;
+    border: none;
+    border-radius: 4px;
+    padding: 5px 10px 5px 30px;
+    color: #fbfbfb;
+    font-size: 10px;
+
+    &:hover {
+        background: url("../../../static/options-hover.svg") 11px 4px no-repeat;
+    }
+}
+
 .profile-link {
     color: var(--grey-2);
     text-decoration: none;
