--- a/src/pages/chat/chat.hbs
+++ b/src/pages/chat/chat.hbs
@@ -1,10 +1,13 @@
 <div class="chats">
     <aside class="chats_sidebar">
         <div class="chats_sidebar-header">
+            <div class="chats_sidebar-header-row">
+                {{{buttonCreateChat}}}
             <a href="../settings" class="profile-link" tabindex="0">
                 Профиль
                 <div class="profile-link-icon"></div>
             </a>
+            </div>
             <div class="chats_sidebar-search">
                 <input class="search-input" type="search" name="search" id="sidebar-search-input" value="" placeholder="Поиск"/>
             </div>
