--- a/src/pages/chat/chat.pcss
+++ b/src/pages/chat/chat.pcss
@@ -26,17 +26,12 @@
 }
 
 .chats_create-button {
-    background: var(--blue-1) url("../../../static/options.svg") 11px 4px no-repeat;
-    box-sizing: border-box;
+    background: transparent url("../../../static/plus.svg") 0 7px no-repeat;
+    color: var(--grey-2);
     border: none;
-    border-radius: 4px;
-    padding: 5px 10px 5px 30px;
-    color: #fbfbfb;
-    font-size: 10px;
-
-    &:hover {
-        background: url("../../../static/options-hover.svg") 11px 4px no-repeat;
-    }
+    padding: 5px 10px 5px 15px;
+    font-size: 12px;
+    cursor: pointer;
 }
 
 .profile-link {
