update login page - new version of withState & authController

--- a/src/pages/login/login.hbs
+++ b/src/pages/login/login.hbs
@@ -6,7 +6,7 @@
         <form action="" id="login-form" method="post" class="form content-form">
             {{{inputLogin}}}
             {{{inputPassword}}}
-            <div class="content-form__error">{{store.state.authError}}</div>
+            <div class="content-form__error">{{authError}}</div>
             <div class="content-form__button">
                 {{{button}}}
             </div>
