update signup page

--- a/src/pages/signin/signin.hbs
+++ b/src/pages/signin/signin.hbs
@@ -11,7 +11,7 @@
             {{{inputPhone}}}
             {{{inputPassword}}}
             {{{inputPasswordRepeat}}}
-            <div class="content-form__error">{{store.state.authError}}</div>
+            <div class="content-form__error">{{authError}}</div>
             <div class="content-form__button">
                 {{{button}}}
             </div>
