update editProfile page

--- a/src/components/avatar-editable/avatar-editable.hbs
+++ b/src/components/avatar-editable/avatar-editable.hbs
@@ -5,6 +5,6 @@
     {{#if avatarUrl}}
     <img src="{{avatarUrl}}" class="profile-avatar avatar-l" alt="avatar">
     {{else}}
-    <div class="profile-avatar avatar-l profile-avatar-default"></div>
+    <div class="profile-avatar avatar-l"></div>
     {{/if}}
 </div>
