update changePassword page

--- a/src/pages/change-password/change-password.hbs
+++ b/src/pages/change-password/change-password.hbs
@@ -12,6 +12,7 @@
                     {{{inputNewPassword}}}
                     {{{inputNewPasswordRepeat}}}
                 </div>
+                <div class="content-form__error">{{profileError}}</div>
                 <div class="profile-form__button">
                     {{{button}}}
                 </div>
